# math-teaching

./: .envrc-example  .gitignore  README.md  dictionaries.md  pyproject.toml
2025-ws-verjetnost/: 2025-10-06.md  2025-10-13.md  2025-10-20.md  README.md  common.tex
2025-ws-verjetnost/2025-11-27/: black-jacket-retrieval-s.tex  black-jacket-retrieval.tex  exercises.tex  matrix-polya-pills-s.tex  matrix-polya-pills.tex  normal-trans-s.tex  normal-trans.tex  police-hooligans-vector-s.tex  police-hooligans-vector.tex  solutions.tex
2025-ws-verjetnost/2025-12-01/: bivariate-marginal-independence-s.tex  bivariate-marginal-independence.tex  black-jacket-retrieval-s.tex  black-jacket-retrieval.tex  change-var-normal-s.tex  change-var-normal.tex  exercises.tex  matrix-polya-pills-s.tex  matrix-polya-pills.tex  solutions.tex  uniform-log-transform-s.tex  uniform-log-transform.tex
2025-ws-verjetnost/2025-12-15/: language-gain-cts-s.tex  language-gain-cts.tex  language-gain-s.tex  language-gain.tex  solutions.tex
notebooks/: create-graphics.ipynb
src/teaching/: latex.py  pdf.py  table.py
tests/: test_latex.py  test_pdf.py  test_table.py
tests/data/: pdf-content-00.md  pdf-content-01.md  pdf-content-99.md
